# acp

./: .gitignore  .ls-lint.yml  .markdownlint-cli2.jsonc  .pymarkdown.json  .yamllint.yaml  .zizmor.yml  CLAUDE.md  INTEGRATION_TESTS_SUMMARY.md  Makefile  QUICKSTART_INTEGRATION.md  README.md  acp.py  main.py  pyproject.toml  test_acp.py  test_integration.py  test_integration_file.txt
.github/: dependabot.yml  release.yml
.github/workflows/: actionlint.yaml  claude-code-review.yml  claude.yml  code-format.yaml  code-lint.yaml  commits.yaml  completions.yaml  eof-newline.yaml  gh-action-lint.yaml  integration-tests.yml  ls-lint.yaml  markdown.yaml  pr-title.yaml  pyproject.yaml  python-black.yaml  python-tests.yaml  release.yaml  shellcheck.yaml  tests.yaml  typos.yaml  yaml.yaml  zizmor.yaml
docker/: Dockerfile.integration  README.md  docker-compose.integration.yml
docs/: INTEGRATION_TESTING.md
tests/completions/: Dockerfile  test_completions.sh
tools/: release.py
