[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-gh"
version = "0.8.0"
description = "Automatic Commit Pusher (acp)- CLI utility for automating pull request creation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPLv2"}
authors = [
    {name = "Victor", email = "bar.victor.2002@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/vbvictor/acp"
Repository = "https://github.com/vbvictor/acp"
Issues = "https://github.com/vbvictor/acp/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "ruff==0.11.4",
    "black==25.1.0",
    "yamllint==1.35.1",
    "build==1.2.2",
    "twine==6.1.0",
]

[project.scripts]
acp = "acp:main"

[tool.setuptools]
py-modules = ["acp"]

[tool.ruff]
# Ignore line length rules (E501) - using black for formatting
lint.ignore = ["E501"]
