[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-gh"
version = "1.5.0"
description = "Automatic Commit Pusher (acp) - CLI tool to create GitHub PRs from staged changes in a single command"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv2"}
authors = [
    {name = "Victor Baranov", email = "bar.victor.2002@gmail.com"}
]
keywords = [
    "git",
    "github",
    "gh",
    "github-cli",
    "pull-request",
    "pr",
    "cli",
    "automation",
    "developer-tools",
    "productivity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "argcomplete>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/vbvictor/acp"
Repository = "https://github.com/vbvictor/acp"
Issues = "https://github.com/vbvictor/acp/issues"
Changelog = "https://github.com/vbvictor/acp/releases"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.1.0",
    "ruff==0.15.7",
    "black==25.11.0",
    "yamllint==1.37.1",
    "zizmor==1.23.1; python_version>='3.10'",
    "shellcheck-py==0.11.0.1",
    "mypy==1.19.1",
    "build==1.4.0",
    "twine==6.2.0",
]

[project.scripts]
acp = "acp:main"

[tool.setuptools]
py-modules = ["acp"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # line length - handled by black
    "D",       # docstrings - not every function needs one
    "ANN",     # type annotations - use mypy instead, ruff only checks presence not correctness
    "S",       # security - this CLI tool is a subprocess wrapper, not a web app
    "T201",    # print() - this is a CLI tool, print is the UI
    "COM812",  # trailing commas - conflicts with black formatter
    "FBT",     # boolean args - would require enums/separate functions for simple internal helpers
    "ARG",     # unused args - some exist for API consistency (e.g. quiet param)
    "PLR0912", # too many branches - orchestration functions are inherently complex
    "PLR0913", # too many arguments - functions like create_pr() and merge_pr() legitimately need many params
    "PLR0915", # too many statements - main() dispatch logic
    "PLR0911", # too many return statements - test helper side_effect functions
    "PLR2004", # magic value comparison - test assertions like `assert exc.value.code == 1`
    "BLE001",  # blind except - intentional in error recovery to switch back to original branch
    "C901",    # complexity - orchestration functions are inherently complex
]

[tool.mypy]
python_version = "3.10"
strict = true
